# ai-guard

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: agentlens-pr-scan.yml  agentlens-requirements-ai-scan.yml  publish-pypi.yml
agentlens/: __init__.py  cli.py  sandbox_provider.py
agentlens/analyzers/: __init__.py  ast_code.py  context.py  guardrail.py  injection_prefilter.py  logic_audit.py  script_code.py  semantic.py
agentlens/behavioral/: __init__.py  analyzer.py
agentlens/core/: __init__.py  fetcher.py  ingestion.py  progress.py
agentlens/engines/: __init__.py  decision.py  exploitability.py  features.py  hybrid.py  normalization.py  rules.py  scoring.py
agentlens/models/: schema.py
agentlens/rules/: decision_policy.yml  default_rules.yml  policy.yaml  scoring.yml
agentlens/skill_scanner/: __init__.py
ai_guard/: cli.py
ai_guard/analyzers/: ast_code.py  base.py  prompt.py  semantic.py
ai_guard/core/: fetcher.py  progress.py  safe_extract.py
ai_guard/engines/: decision.py  features.py  hybrid.py  normalization.py  scoring.py
ai_guard/models/: schema.py
ai_guard/rules/: scoring.yml
benchmarks/: BENCHMARKING_GUIDE.md  IMPROVEMENTS.md  README.md  behavioral_benchmark.py  compare_regression.py  logic_audit_benchmark.py  offline_benchmark.py  run_benchmark.sh
benchmarks/datasets/: README.md
benchmarks/datasets/adversarial/prompt_injection_code/: README.md  malicious.py
benchmarks/datasets/adversarial/prompt_injection_manifest/: README.md  analytics.py  skill.json
benchmarks/datasets/agent_hijacker/hidden_instructions/: README.md  (+2 more)
benchmarks/datasets/benign_plugin/: README.md  SKILL.md  formatter.py  manifest.json
benchmarks/datasets/dynamic_import_hijacker/: README.md  SKILL.md  loader.py  manifest.json
benchmarks/datasets/malicious_wheel/: README.md  SKILL.md  analytics.py  manifest.json
benchmarks/results/: behavioral_benchmark.json  logic_audit_benchmark.json  offline_benchmark.json
calibration/: calibrate.py
tests/: test_decision.py  test_exploitability.py  test_hybrid_sampling.py  test_injection_prefilter.py  test_obfuscation_detection.py  test_package_versions.py  test_paper_archetypes.py  test_safe_extract.py  test_sandbox_provider.py  test_scoring.py  test_script_code.py
(+27 files in other folders)
